<resources>
    <string name="app_name" translatable="false">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="new_crime">New Crime</string>
    <string name="empty_data">List is empty</string>
    <string name="empty_data_button">ADD</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="call_button_text">Call</string>

</resources>